--- a/data/ML Pipeline Preparation.ipynb
+++ b/data/ML Pipeline Preparation.ipynb
@@ -386,22 +386,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lenovo\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1143: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "C:\\Users\\lenovo\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1145: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n",
+      "C:\\Users\\lenovo\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1143: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 due to no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "C:\\Users\\lenovo\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1145: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 due to no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
+      "                        precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.95      0.99      0.97    215461\n",
-      "           1       0.82      0.51      0.63     20446\n",
-      "           2       0.42      0.30      0.35        37\n",
+      "               related       0.00      0.00      0.00         0\n",
+      "               request       0.00      0.00      0.00         0\n",
+      "                 offer       0.00      0.00      0.00         0\n",
+      "           aid_related       0.00      0.00      0.00         0\n",
+      "          medical_help       0.00      0.00      0.00         0\n",
+      "      medical_products       0.00      0.00      0.00         0\n",
+      "     search_and_rescue       0.00      0.00      0.00         0\n",
+      "              security       0.00      0.00      0.00         0\n",
+      "              military       0.00      0.00      0.00         0\n",
+      "           child_alone       0.00      0.00      0.00         0\n",
+      "                 water       0.00      0.00      0.00         0\n",
+      "                  food       0.00      0.00      0.00         0\n",
+      "               shelter       0.00      0.00      0.00         0\n",
+      "              clothing       0.00      0.00      0.00         0\n",
+      "                 money       0.00      0.00      0.00         0\n",
+      "        missing_people       0.00      0.00      0.00         0\n",
+      "              refugees       0.00      0.00      0.00         0\n",
+      "                 death       0.00      0.00      0.00         0\n",
+      "             other_aid       0.00      0.00      0.00         0\n",
+      "infrastructure_related       0.00      0.00      0.00         0\n",
+      "             transport       0.00      0.00      0.00         0\n",
+      "             buildings       0.00      0.00      0.00         0\n",
+      "           electricity       0.00      0.00      0.00         0\n",
+      "                 tools       0.00      0.00      0.00         0\n",
+      "             hospitals       0.00      0.00      0.00         0\n",
+      "                 shops       0.00      0.00      0.00         0\n",
+      "           aid_centers       0.00      0.00      0.00         0\n",
+      "  other_infrastructure       0.00      0.00      0.00         0\n",
+      "       weather_related       0.00      0.00      0.00         0\n",
+      "                floods       0.00      0.00      0.00         0\n",
+      "                 storm       0.00      0.00      0.00         0\n",
+      "                  fire       0.00      0.00      0.00         0\n",
+      "            earthquake       0.00      0.00      0.00         0\n",
+      "                  cold       0.00      0.00      0.00         0\n",
+      "         other_weather       0.00      0.00      0.00         0\n",
+      "         direct_report       0.00      0.00      0.00         0\n",
       "\n",
-      "   micro avg       0.95      0.95      0.95    235944\n",
-      "   macro avg       0.73      0.60      0.65    235944\n",
-      "weighted avg       0.94      0.95      0.94    235944\n",
+      "             micro avg       0.00      0.00      0.00         0\n",
+      "             macro avg       0.00      0.00      0.00         0\n",
+      "          weighted avg       0.00      0.00      0.00         0\n",
       "\n"
      ]
     }
@@ -422,7 +469,8 @@
     "])\n",
     "pipeline1.fit(X_train,y_train)\n",
     "y_pred = pipeline1.predict(X_test)\n",
-    "print(classification_report(np.hstack(y_test),np.hstack(y_pred)))"
+    "# print(classification_report(np.hstack(y_test),np.hstack(y_pred)))\n",
+    "print(classification_report(np.hstack(y_test),np.hstack(y_pred), labels=labels, target_names =labels))"
    ]
   },
   {
@@ -485,29 +533,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lenovo\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1143: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "C:\\Users\\lenovo\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1145: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n",
+      "C:\\Users\\lenovo\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1143: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 due to no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "C:\\Users\\lenovo\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1145: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 due to no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
+      "                        precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.95      0.99      0.97    215461\n",
-      "           1       0.81      0.47      0.59     20446\n",
-      "           2       0.39      0.30      0.34        37\n",
+      "               related       0.00      0.00      0.00         0\n",
+      "               request       0.00      0.00      0.00         0\n",
+      "                 offer       0.00      0.00      0.00         0\n",
+      "           aid_related       0.00      0.00      0.00         0\n",
+      "          medical_help       0.00      0.00      0.00         0\n",
+      "      medical_products       0.00      0.00      0.00         0\n",
+      "     search_and_rescue       0.00      0.00      0.00         0\n",
+      "              security       0.00      0.00      0.00         0\n",
+      "              military       0.00      0.00      0.00         0\n",
+      "           child_alone       0.00      0.00      0.00         0\n",
+      "                 water       0.00      0.00      0.00         0\n",
+      "                  food       0.00      0.00      0.00         0\n",
+      "               shelter       0.00      0.00      0.00         0\n",
+      "              clothing       0.00      0.00      0.00         0\n",
+      "                 money       0.00      0.00      0.00         0\n",
+      "        missing_people       0.00      0.00      0.00         0\n",
+      "              refugees       0.00      0.00      0.00         0\n",
+      "                 death       0.00      0.00      0.00         0\n",
+      "             other_aid       0.00      0.00      0.00         0\n",
+      "infrastructure_related       0.00      0.00      0.00         0\n",
+      "             transport       0.00      0.00      0.00         0\n",
+      "             buildings       0.00      0.00      0.00         0\n",
+      "           electricity       0.00      0.00      0.00         0\n",
+      "                 tools       0.00      0.00      0.00         0\n",
+      "             hospitals       0.00      0.00      0.00         0\n",
+      "                 shops       0.00      0.00      0.00         0\n",
+      "           aid_centers       0.00      0.00      0.00         0\n",
+      "  other_infrastructure       0.00      0.00      0.00         0\n",
+      "       weather_related       0.00      0.00      0.00         0\n",
+      "                floods       0.00      0.00      0.00         0\n",
+      "                 storm       0.00      0.00      0.00         0\n",
+      "                  fire       0.00      0.00      0.00         0\n",
+      "            earthquake       0.00      0.00      0.00         0\n",
+      "                  cold       0.00      0.00      0.00         0\n",
+      "         other_weather       0.00      0.00      0.00         0\n",
+      "         direct_report       0.00      0.00      0.00         0\n",
       "\n",
-      "   micro avg       0.94      0.94      0.94    235944\n",
-      "   macro avg       0.72      0.58      0.63    235944\n",
-      "weighted avg       0.94      0.94      0.94    235944\n",
+      "             micro avg       0.00      0.00      0.00         0\n",
+      "             macro avg       0.00      0.00      0.00         0\n",
+      "          weighted avg       0.00      0.00      0.00         0\n",
       "\n"
      ]
     }
    ],
    "source": [
     "labels = ['related', 'request', 'offer', 'aid_related', 'medical_help', 'medical_products', 'search_and_rescue', 'security', 'military', 'child_alone', 'water', 'food', 'shelter', 'clothing', 'money', 'missing_people', 'refugees', 'death', 'other_aid', 'infrastructure_related', 'transport', 'buildings', 'electricity', 'tools', 'hospitals', 'shops', 'aid_centers', 'other_infrastructure', 'weather_related', 'floods', 'storm', 'fire', 'earthquake', 'cold', 'other_weather', 'direct_report']\n",
-    "print(classification_report(np.hstack(y_test),np.hstack(y_pred)))"
+    "print(classification_report(np.hstack(y_test),np.hstack(y_pred), labels=labels, target_names =labels))"
    ]
   },
   {
